[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "neveronce"
version = "0.1.0"
description = "Persistent, correctable memory for AI. The memory layer that learns from mistakes."
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Weber Gouin", email = "weber@bimopsstudio.com" },
]
keywords = ["ai", "memory", "llm", "mcp", "agents", "corrections", "neveronce"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

[project.optional-dependencies]
mcp = ["mcp>=1.0.0"]

[project.urls]
Homepage = "https://github.com/WeberG619/neveronce"
Repository = "https://github.com/WeberG619/neveronce"
Issues = "https://github.com/WeberG619/neveronce/issues"

[project.scripts]
neveronce = "neveronce.server:main"

[tool.setuptools.packages.find]
include = ["neveronce*"]
